登录验证,从数据库取出加密后的password和salt和登录时md5+salt之后的密码比对

--- a/src/main/resources/templates/registered.html
+++ b/src/main/resources/templates/registered.html
@@ -10,5 +10,6 @@
         <input type="password" name="password" placeholder="password"><br>
         <input type="submit" value="注册">
     </form>
+    <a th:href="@{/returnlogin}">登录</a>
 </body>
 </html>
